--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,21 +34,21 @@ jobs:
 
       - name: Publish Electron App
         run: npm run publish
-  # build_on_window:
-  #   runs-on: windows-latest
-  #   steps:
-  #     - name: Checkout
-  #       # uses: ver
-  #       uses: actions/checkout@v3.0.0
+  build_on_window:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        # uses: ver
+        uses: actions/checkout@v3.0.0
       
-  #     - name: Install Node
-  #       uses: actions/setup-node@v3.0.0
+      - name: Install Node
+        uses: actions/setup-node@v3.0.0
 
-  #     - name: Install dependencies
-  #       run: npm install
+      - name: Install dependencies
+        run: npm install
 
-  #     - name: Publish Electron App
-  #       run: npm run publish
+      - name: Publish Electron App
+        run: npm run publish
 
   # build_on_win-2019:
   #   runs-on: windows-2019
