--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^6.8.1",
     "electron": "25.2.0",
     "electron-log": "^4.4.8",
+    "electron-winstaller": "^5.1.0",
     "eslint": "^8.44.0",
     "eslint-plugin-import": "^2.27.5",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
