--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: # 监听 main 分支上的 push 事件
     branches:
       - main
 env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: "$secrets.GITHUB_TOKEN"
 jobs:
   # build_on_mac:
   #   runs-on: macos-latest
@@ -20,20 +20,20 @@ jobs:
 
   #     - name: Publish Electron App
   #       run: npm run publish
-  build_on_mac_11:
-    runs-on: macos-11
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.0.0
+  # build_on_mac_11:
+  #   runs-on: macos-11
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3.0.0
       
-      - name: Install Node
-        uses: actions/setup-node@v3.0.0
+  #     - name: Install Node
+  #       uses: actions/setup-node@v3.0.0
 
-      - name: Install dependencies
-        run: npm install 
+  #     - name: Install dependencies
+  #       run: npm install 
 
-      - name: Publish Electron App
-        run: npm run publish
+  #     - name: Publish Electron App
+  #       run: npm run publish
   build_on_window:
     runs-on: windows-latest
     steps:
