--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: # 监听 main 分支上的 push 事件
     branches:
       - main
 env:
-  GITHUB_TOKEN: "$secrets.GITHUB_TOKEN"
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 jobs:
   # build_on_mac:
   #   runs-on: macos-latest
