--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,22 +8,8 @@ env:
   # CSC_LINK: ./cert/mockplus.p12
   # CSC_KEY_PASSWORD: "123456"
 jobs:
-  # build_on_mac:
-  #   runs-on: macos-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3.0.0
-      
-  #     - name: Install Node
-  #       uses: actions/setup-node@v3.0.0
-
-  #     - name: Install dependencies
-  #       run: npm install 
-
-  #     - name: Publish Electron App
-  #       run: npm run publish
-  build_on_mac_11:
-    runs-on: macos-11
+  build_on_mac:
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.0
@@ -36,23 +22,37 @@ jobs:
 
       - name: Publish Electron App
         run: npm run publish
-  build_on_window:
-    runs-on: windows-latest
-    steps:
-      - name: Checkout
-        # uses: ver
-        uses: actions/checkout@v3.0.0
+  # build_on_mac_11:
+  #   runs-on: macos-11
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3.0.0
       
-      - name: Install Node
-        uses: actions/setup-node@v3.0.0
-        with:
-          node-version: 16
+  #     - name: Install Node
+  #       uses: actions/setup-node@v3.0.0
 
-      - name: Install dependencies
-        run: npm install
+  #     - name: Install dependencies
+  #       run: npm install 
 
-      - name: Publish Electron App
-        run: npm run publish
+  #     - name: Publish Electron App
+  #       run: npm run publish
+  # build_on_window:
+  #   runs-on: windows-latest
+  #   steps:
+  #     - name: Checkout
+  #       # uses: ver
+  #       uses: actions/checkout@v3.0.0
+      
+  #     - name: Install Node
+  #       uses: actions/setup-node@v3.0.0
+  #       with:
+  #         node-version: 16
+
+  #     - name: Install dependencies
+  #       run: npm install
+
+  #     - name: Publish Electron App
+  #       run: npm run publish
 
   # build_on_win-2019:
   #   runs-on: windows-2019
