--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rp-app",
-  "productName": "摹客RP",
+  "name": "rp-app-beta",
+  "productName": "摹客RP-beta",
   "appId": "com.app.mockplus.rp-app",
   "version": "5.0.0-beta",
   "description": "摹客RP-高效易用的在线原型设计工具",
