--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ES2015",
     "allowJs": true,
     "module": "commonjs",
+    "strict": true,
+    "alwaysStrict": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
