--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "rp-app-beta",
+  "name": "rp-app",
   "productName": "摹客RP-beta",
   "appId": "com.app.mockplus.rp-app",
   "version": "5.0.0-beta",
   "description": "摹客RP-高效易用的在线原型设计工具",
   "main": ".webpack/main",
+  "appType": "prod",
   "scripts": {
-    "start": "electron-forge start -- test",
-    "win-start": "chcp 65001 && electron-forge start",
+    "start": "node index.js test && electron-forge start",
+    "win-start": "chcp 65001 && node index.js test && electron-forge start",
     "package": "electron-forge package",
-    "make": "electron-forge make",
+    "make": "node index.js test && electron-forge make",
+    "make-prod": "node index.js prod && electron-forge make",
     "make-win": "electron-forge make  ./ --platform=win32 --ignore=node_modules --arch=x64",
     "package-win": "electron-packager ./ --platform=win32 --out ./dist  --overwrite  --ignore=node_modules --arch=x64",
     "publish": "electron-forge publish",
